# Terra-Capital

./: .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.mjs  tailwind.config.ts  test-vercel.js  wrangler.toml
.github/workflows/: k6-deploy-guardrail.yml
.playwright-cli/: page-2026-03-12T01-16-50-482Z.yml  page-2026-03-12T01-20-00-340Z.yml  page-2026-03-12T02-34-12-001Z.yml  page-2026-03-12T02-36-31-487Z.yml
backend/: Cargo.toml  README.md
backend/src/: main.rs
contracts/: Cargo.toml  README.md  deploy-config.example.json
contracts/terra_marketplace/: Cargo.toml
contracts/terra_marketplace/src/: lib.rs
contracts/terra_tokenization/: Cargo.toml
contracts/terra_tokenization/src/: lib.rs
migrations/: 0001_initial.sql
output/playwright/: home-desktop.txt  home-mobile.txt
scripts/: apply-supabase-sql.mjs  dev-offchain.cmd  platform-build.mjs  verify-cloudflare-config.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/account/: page.tsx
src/app/buyer/: page.tsx
src/app/chats/: page.tsx
src/lib/: auth.ts  constants.ts  format.ts  marketplace.ts  media.ts  oracle.ts  security.ts  stellar-payments.ts  stellar.ts  storage.ts  wallet.ts
src/types/: auth.ts  market.ts
supabase/migrations/: 0001_app_users.sql  0002_marketplace.sql  0003_chat_message_deletes.sql  0004_token_cycles.sql  0005_usdt_precision.sql  0006_media_gallery.sql  0007_stellar_purchase_tx.sql  0008_merge_split_asset_duplicates.sql  0009_admin_roles_and_buyer_verification.sql  0010_owner_admin_buyer_verified.sql
(+73 files in other folders)
